[FIX] web: list: don't squeeze button columns
Adjacent buttons are not displayed in a single column. When the
table overflows, we try to squeeze largest columns to make it fit
into its container (in this case, text may be clipped and an
ellipsis is displayed). Button columns didn't get away from this.

As a consequence, now that a cell may contain several buttons,
some of them may be clipped and replaced by the ellipsis, which
isn't what we want for buttons.

This commit removes the button columns from the list of columns
to squeeze, so we let the browser reduce them as much as it can,
and we keep them as they are.

Task 2282470

X-original-commit: e00960daa3ed3d1fd3a7572b2acedd3d2fb0448e

--- a/addons/web/static/src/scss/list_view.scss
+++ b/addons/web/static/src/scss/list_view.scss
@@ -28,8 +28,11 @@
             }
         }
         tbody > tr > td:not(.o_list_record_selector) {
-            &:not(.o_handle_cell) {
+            &:not(.o_handle_cell):not(.o_list_button) {
                 @include o-text-overflow(table-cell);
+                &.o_list_text {
+                    white-space: pre-wrap;
+                }
             }
 
             &.o_list_number {
@@ -37,16 +40,18 @@
             }
             &.o_list_text {
                 word-break: break-word;
-                white-space: pre-wrap;
             }
             &.o_list_char.o_color_cell .o_field_color {
                 width: 17px;
                 height: 17px;
             }
-            &.o_list_button > button {
-                padding: 0 5px;
-                &:not(:last-child) {
-                    margin-right: 3px;
+            &.o_list_button {
+                white-space: nowrap;
+                > button {
+                    padding: 0 5px;
+                    &:not(:last-child) {
+                        margin-right: 3px;
+                    }
                 }
             }
         }
